...
            android:layout_margin="6dp" android:background="@drawable/pin_dot_bg" />

    </LinearLayout>

    <!-- Section PIN -->
    <LinearLayout
        android:id="@+id/pin_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Rangée 1-2-3 -->
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal">
            <Button android:id="@+id/btn1" style="@style/Luna.PinButton" android:text="1" />
            <Button android:id="@+id/btn2" style="@style/Luna.PinButton" android:text="2" />
            <Button android:id="@+id/btn3" style="@style/Luna.PinButton" android:text="3" />
        </LinearLayout>
        <!-- Rangée 4-5-6 -->
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal">
            <Button android:id="@+id/btn4" style="@style/Luna.PinButton" android:text="4" />
...
